#197: Added entityAttributeEntityAttributeGroup and entityAttributeEntityAttributeGroups queries